--- a/index.html
+++ b/index.html
@@ -991,7 +991,7 @@ body .tiny{
       <h3>Como desbloquear premiações</h3>
       <p class="lead">Os prêmios são liberados conforme o avanço no ciclo e o atingimento das metas.</p>
       <div class="grid cols-3">
-        <div class="card"><h4>1) Entregue sua meta</h4><p>Acima de 70% já gera cupons. A partir de 100% você entra na urna 2.</p></div>
+        <div class="card"><h4>1) Entregue sua meta</h4><p>Quanto maior a entrega da sua meta, maiores são as suas chances de ganhar!</p></div>
         <div class="card"><h4>2) Fortaleça o time</h4><p>As gerências precisam fechar suas metas para habilitar sorteios.</p></div>
         <div class="card"><h4>3) Feche o trimestre</h4><p>Trimestre bem fechado deixa a corda firme para a meta anual.</p></div>
       </div>
