--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@ body .tiny{
       <p class="lead">Nossa campanha traduz coragem, constância e espírito de equipe. Cada ciclo é um passo rumo ao cume.</p>
       <div class="m-grid">
         <article class="m-card">
-          <div class="m-photo" style="background-image:url('https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?q=80&w=1600&auto=format&fit=crop');"></div>
+          <div class="m-photo" style="background-image:url('assets/passo.png');"></div>
           <div class="m-body">
             <span class="m-chip">Coragem</span>
             <h4>O primeiro passo exige decisão.</h4>
