--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@ body .tiny{
           </div>
         </article>
         <article class="m-card">
-          <div class="m-photo" style="background-image:url('https://images.unsplash.com/photo-1482192505345-5655af888cc4?q=80&w=1600&auto=format&fit=crop');"></div>
+          <div class="m-photo" style="background-image:url('assets/Avanco.png');"></div>
           <div class="m-body">
             <span class="m-chip">Constância</span>
             <h4>Cada avanço é disciplina.</h4>
@@ -715,7 +715,7 @@ body .tiny{
           </div>
         </article>
         <article class="m-card">
-          <div class="m-photo" style="background-image:url('https://images.unsplash.com/photo-1509644851146-d0f3f3f2c5f8?q=80&w=1600&auto=format&fit=crop');"></div>
+          <div class="m-photo" style="background-image:url('assets/Cume.png');"></div>
           <div class="m-body">
             <span class="m-chip">Orgulho</span>
             <h4>Chegar ao cume é fazer história.</h4>
